# TaoLang

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/actions/setup-llvm/: action.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-04-cross-platform-ci.md  2026-03-04-release-build-design.md
docs/problems/: crt-mismatch.md  phase1-bugs.md
docs/taolang/: classes-and-structs.md  compiler.md  ffi.md  file-types.md  functions.md  index.md  keywords.md  modules.md  philosophy.md  variable-design.md  variables.md
docs/taolang/lifecycle/: hooks.md  overview.md  spaces.md  variable-shadowing.md
docs/user/: taichi.md
examples/01_basics/: hello.tao  types.tao  variables.tao
examples/02_functions/: higher_order.tao  recursion.tao  simple_fn.tao
examples/03_control_flow/: conditionals.tao  flow_control.tao  loops.tao
examples/04_structs_classes/: access_control.tao  classes.tao  inheritance.tao  structs.tao
examples/05_spaces/: anonymous_space.tao  basic_space.tao  nested_spaces.tao  space_control.tao
examples/06_lifecycle/: on_hooks.tao  space_lifecycle.tao  variable_lifecycle.tao  when_hooks.tao
examples/07_advanced/: delegation.tao  entity_and_free.tao  metadata.tao  shadowing.tao
examples/08_modules/: main.tao  math_ffi.ti  math_utils.tao
examples/09_comprehensive/: mini_app.tao
taichi/: Cargo.toml
taichi/src/: main.rs
taoc/: Cargo.toml  build.rs
taoc/csrc/: llvm_string_bridge.c
taoc/src/: lib.rs  main.rs
taoc/src/codegen/: codegen.rs  llvm_wrapper.rs  mod.rs
taoc/src/driver/: compiler.rs  mod.rs
taoc/src/error/: diagnostic.rs  mod.rs
taoc/src/lexer/: lexer.rs  mod.rs  span.rs  token.rs
taoc/src/parser/: ast.rs  mod.rs  parser.rs
taoc/tests/: memory_diag.rs
